stone: parts: Introduce GameBar v4.0
[elpaablo]: Import from https://github.com/Chaitanyakm/device_xiaomi_sm8450-common
            Merge GameBar boot receiver into parts boot receiver
Signed-off-by: elpaablo <donopwhile1@gmail.com>

sm8450-common: parts: Introduce GameBar v4.0
Signed-off-by: kenway214 <kenway214@outlook.com>

peridot: parts: Add FPS meter support with selectable method for GameBar

- Introduced `GameBarFpsMeter` class to support FPS overlay using the new Android 13+ TaskFpsCallback API.
- Added fallback legacy sysfs method (`/sys/class/drm/sde-crtc-0/measured_fps`) for older devices.
- Updated GameBar to show FPS using selected method.

Signed-off-by: kenway214 <kenway214@outlook.com>

bump to v4
4

--- a/parts/res/values/strings.xml
+++ b/parts/res/values/strings.xml
@@ -133,4 +133,12 @@
     <string name="little_cpu_status_title">Little CPU Cluster</string>
     <string name="big_cpu_status_title">Big CPU Cluster</string>
 
+    <!-- GameBar Overlay -->
+    <string name="game_bar_title">GameBar</string>
+    <string name="game_bar_summary">Enable the system overlay (FPS, Temp, etc.)</string>
+    <string name="overlay_permission_required">Overlay permission is required</string>
+    <string name="overlay_permission_granted">Overlay permission granted</string>
+    <string name="overlay_permission_denied">Overlay permission denied</string>
+    <string name="game_bar_tile_label">GameBar</string>
+    <string name="game_bar_tile_description">Toggle the game overlay</string>
 </resources>
